# Gravity-Ho-Matey

./: .gitignore  README.md  devgov.toml  devgov.yaml  pyproject.toml  run_game.py
.cursor/rules/: devgov-agent-ownership.mdc  devgov.mdc
docs/: ARCHITECTURE.md  CURSOR_HANDOFF.md  DEEP_RESEARCH_AND_PLANNING.md  DEVGOV_JOURNAL.md  L7_COMET_EXPEDITION_PLAN.md  LEVELS_6_10_MEGA_BRAINSTORM.md  PYGAME_CE_MIGRATION_PLAN.md  SPACE_JUNK_SPEC.md  TITLE_SCREEN_REDESIGN_PLAN.md  UNIQUE_ENTITIES_MEGA_BRAINSTORM.md
src/gravity_ho_matey/: __main__.py  app.py  main.py  settings.py
src/gravity_ho_matey/core/: geometry.py  vector.py
tests/: test_asteroid_breakup_audit.py  test_asteroid_combat.py  test_asteroid_spatial.py  test_asteroids.py  test_boost_burst.py  test_brood_landing_transition.py  test_brood_moon_level.py  test_brood_moon_props.py  test_brood_surface_polish.py  test_brood_surface_viz.py  test_camera.py  test_campaign.py  test_chart_bounds_alerts.py  test_chart_briefing.py  test_chart_briefing_copy.py  test_chart_briefing_layout.py  test_chart_edge_hints.py  test_chart_edge_hints_l12.py  test_chart_radiation.py  test_chase_fx.py  test_chase_instruments.py  test_chase_mirror.py  test_chase_play_integration.py  test_chase_rig.py  test_comet_fuel_level.py  test_drift_level.py  test_drone_wingman.py  test_enemy_aim.py  test_enemy_shooting.py  test_enemy_viz.py  test_entity_parity.py  test_explosions.py  test_friendly_fighters.py  test_gate_viz.py  test_gravity.py  test_gravity_heatmap.py  test_guard_level.py  test_health.py  test_health_bar_viz.py  test_hostile_fighter.py  (+42 more)
(+209 files in other folders)
